# gestore_retribuzioni

./: Cargo.toml  README.md
src/: main.rs
ui/: app-window.slint
